--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@ body{
 }
 
 /* SEARCHBAR STYLING */
+.dictLogo{
+    background-color: #e3e3e3;
+    padding: 10px;
+    border-radius: 100px;
+    transition: 10s;
+}
+.dictLogo:hover{
+    transform: rotate(7200deg);
+    transition: 20s;
+}
+
+
 .searchBarHolder{
     width:100vw;
     height: 10vh;
@@ -37,6 +49,13 @@ body{
     padding: 7px;
     background-color: #131314;
     border-radius: 5px;
+    transition: 1s;
+}
+.searchButton:hover{
+    color:#121213;
+    background-color: #e3e3e3;
+    transition: 1s;
+    transform: scale(1.1);
 }
 /* SEARCHBAR STYLING */
 
@@ -78,9 +97,23 @@ body{
     color: #e3e3e3;
 }
 .hearSearchWord{
+    /* padding: 15px; */
+    border-radius: 100px;
+    background-color: transparent;
+}
+#playButton{
+    background-color: #e3e3e3;
     padding: 15px;
     border-radius: 100px;
-    background-color: #e3e3e3;
+    transition: 0.5s;
+}
+#playButton:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+#audioPlayer{
+    display: none;
 }
 /* ANSWERBOX TOP PART STYLING */
 
@@ -94,7 +127,7 @@ body{
 /* ANSWERBOX BOTTOM PART STYLING */
 .answerBottomPart{
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     margin-bottom: 20px;
 }
@@ -112,6 +145,7 @@ body{
 }
 .answerBottomPartChildText{
     color: #e3e3e3;
+    font-weight: lighter;
 }
 
 #wordPartsOfSpeech{
@@ -147,5 +181,62 @@ body{
     background-color: #e3e3e3;
     border-radius: 10px;
     margin: 10px;
+    transition: 1s;
 }
+.sourceButton:hover{
+    background-color: yellow;
+    color:#121213;
+    transform: scale(1.2);
+    transition: 1s;
+}
+/* ANSWERBOX BOTTOM PART STYLING */
+
+/* ADDING RESPONSIVENESS FOR MOBILE VIEW */
+@media (orientation:portrait){
+    #playButton{
+        padding: 10px;
+    }
+    .answerTopPart{
+        height: 30%;
+        flex-direction: column;
+    }
+    .answerTopPartChild{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .answerBottomPart{
+        height: 70%;
+    }
+
+    .answerBottomPartChildText{
+        color: #e3e3e3;
+        font-size: small;
+    }
+    
+    #wordPartsOfSpeech{
+        font-size:large;
+    }
+
+    .creditCodeayan{
+        font-size: 12px;
+   }
+}
+/* ADDING RESPONSIVENESS FOR MOBILE VIEW */
+
+.creditCodeayan{
+     position: fixed;
+     bottom: 5px;
+     left: 50%;
+     transform: translateX(-50%);
+     z-index: +100; /* Adjust as needed */
+     text-align: center;
+
+     color:#e3e3e3;
+}
+.creditCodeayanLink{
+    color:#de2c44;
+}
+
+
+
 
